<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="8.0pt" android:layout_gravity="center" android:id="@id/mixer_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0pt" android:text="输入任意地图码" />
    <TextView android:textSize="6.0pt" android:layout_gravity="center" android:id="@id/mixer_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="或点击 '随机' 获得随机码" />
    <LinearLayout android:layout_gravity="center" android:id="@id/mixer_display_layout" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1.0" />
    <LinearLayout android:id="@id/mixer_button_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/go_back" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/go_back" android:layout_weight="1.0" />
        <Button android:id="@id/randomize" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/randomize" android:layout_weight="1.0" />
        <Button android:id="@id/start_game" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/start_game" android:includeFontPadding="true" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>