<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="8.0pt" android:layout_gravity="center" android:id="@id/level_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0pt" android:text="选择难度等级" />
    <TextView android:textSize="6.0pt" android:layout_gravity="center" android:id="@id/level_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="免费版本的最大难度等级为10" />
    <LinearLayout android:layout_gravity="center" android:id="@id/level_display_layout" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1.0">
        <ImageButton android:layout_gravity="center" android:id="@id/level_down" android:background="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/down_arrow" />
        <TextView android:textSize="14.0pt" android:layout_gravity="center" android:id="@id/level_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="等级 0" />
        <ImageButton android:layout_gravity="center" android:id="@id/level_up" android:background="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/up_arrow" />
    </LinearLayout>
    <TextView android:textSize="8.0pt" android:layout_gravity="center" android:id="@id/map_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0pt" android:text="选择地图" />
    <LinearLayout android:layout_gravity="center" android:id="@id/map_display_layout" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1.0">
        <ImageButton android:layout_gravity="center" android:id="@id/map_down" android:background="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/down_arrow" />
        <TextView android:textSize="14.0pt" android:layout_gravity="center" android:id="@id/map_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="基本地图" />
        <ImageButton android:layout_gravity="center" android:id="@id/map_up" android:background="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/up_arrow" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center" android:id="@id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <CheckBox android:id="@id/CheckBox01" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sound_enabled" />
    </LinearLayout>
    <LinearLayout android:id="@id/level_button_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/go_back" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/go_back" android:layout_weight="1.0" />
        <Button android:id="@id/start_game" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/start_game" android:includeFontPadding="true" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>